style: fix z-indexes of components

--- a/member-frontend/src/components/Cart/CheckoutForm/index.scss
+++ b/member-frontend/src/components/Cart/CheckoutForm/index.scss
@@ -1,9 +1,11 @@
+@import "../../../sass/main";
+
 .form-wrapper {
 	position: fixed;
 	width: 100%;
 	height: 100%;
 	background-color: rgba(0, 0, 0, 0.85);
-	z-index: 20;
+	z-index: $z-index-checkout;
 	animation-name: fadeIn;
 	animation-duration: 500ms;
 	text-align: center;
