--- a/member-frontend/src/components/Cart/index.scss
+++ b/member-frontend/src/components/Cart/index.scss
@@ -1,10 +1,12 @@
+@import "../../sass/main";
+
 .cart {
 	width: 450px;
 	max-width: 100%;
 	background-color: #1b1a20;
 	position: fixed;
 	height: 100%;
-	z-index: 10;
+	z-index: $z-index-cart;
 	right: 0;
 
 	animation-name: translateIn;
