--- a/member-frontend/src/components/Error/index.scss
+++ b/member-frontend/src/components/Error/index.scss
@@ -1,9 +1,11 @@
+@import "../../sass/main";
+
 .error-container {
 	position: fixed;
 	width: 100%;
 	height: 100%;
 	background-color: rgba(0, 0, 0, 0.85);
-	z-index: 10;
+	z-index: $z-index-errors;
 	animation-name: fadeIn;
 	animation-duration: 500ms;
 	text-align: center;
