--- a/member-frontend/src/components/NavBar/index.scss
+++ b/member-frontend/src/components/NavBar/index.scss
@@ -8,6 +8,7 @@
 	font-size: 1rem;
 	flex-direction: row;
 	justify-content: flex-end;
+	z-index: $z-index-navigation;
 
 	@include respond(phone) {
 		justify-content: center;
